Tentado arrumar a documentação.
O corpo do request body não aparece nos métodos put e post, não é possível enviar os dados para criar ou alterar um registro na documentação.
