# backend/src/routes/DrinkRoutes.js
@@ -9,8 +9,6 @@ router.post("/products/drinks", Upload.single("image"), DrinkController.create)
 
 router.get("/products/drinks", DrinkController.getAll)
 
-router.get("/products/drinks/query", DrinkController.getByParams)
-
 router.get("/products/drinks/:id", DrinkController.getById)
 
 router.put("/products/drinks/:id", DrinkController.update)
